crates/keron-lang/tests/corpus/errors/check/fn_body_local_shadows_outer_val.keron
val n: Int = 1

fn f(): Int {
  val n = 2
  n
}
